public/main.css
/*Global attributes*/
html {
  touch-action: manipulation;
  height: 100%;
  width:auto;
  background-image: url("images/background_seamless-scaled-min.jpg"); 
  background-position: center center;
  background-repeat: repeat-y;
}

body {
  min-width:960px;
}

a:link, a:visited {
  color:black;
  text-decoration: none;
}

a:hover {
  color: #cc3300;
}

ul {
  padding: 0;
  margin-left:1em;
  list-style-type: circle;
}

ul > div {
  margin-left:-1em;
}

table {
  table-layout: fixed;
  width:500px;
}


tr:nth-child(even){
  background-color: #cea564
}

th {
  background-color: #331f00;
  color: #cea564;
}

ol {
  list-style: none;
  counter-reset: item;
}

ol > li  {
  counter-increment: item;
  position: relative;
  padding: 1.5em 1.5em 1.5em;
  padding-top:0em;
  padding-left:1em;
  padding-right:0em;
  padding-bottom: 2em;
}

ol > li:before {
  left: -50px;
  top:-15px;
  position: absolute;
  font-size:40px;
  width:1.5em;
  height:1.5em;
  content: counter(item);
  background-image: url('images/inkSplotch.png');
  background-size:90% 130%;
  background-repeat: no-repeat;
  background-position: center center;
  color: #cea564;
  text-align: center;
  list-style: none;
}

i {
  border: solid #cc3300;
  border-width: 0 3px 3px 0;
  display: inline-block;
  padding: 3px;
  margin-bottom:5px;
}

hr {
  border: none;
  color:#331f00;
  background-color: #331f00;
  height: 2px;
}

li:empty {
   display: none;
}

/*==================================================================================*/

#fullScroll {
  color: #331f00; /*dark brown*/
  text-align: center;
}

/* ------------------------HEADER----------------------------------------------------- */

.header {
  position: relative;
}

.parchmentEnds {
  width:78%;height:150px;
  display: block;
  margin: auto;
  position:relative;
}

#headerText {
  font-size: 55px;
  position: absolute;
  top: 25%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-family: 'Merienda', cursive;
}

/* ------------------------MIDDLE SCROLL----------------------------------------------------- */

#middleScroll {
  background-image: url('images/scrollMiddle-scaled-min.png');
  background-repeat: no-repeat;
  background-position: center;
  background-size: 75% 100%;
  height:auto;
  padding-bottom:10px;
  overflow:hidden;
  margin-top:-1px;
}

.text {
  font-size: 150%;
  font-family: rubik;
}

.instructions {
  width: 70%;
  margin: auto;
  padding-top:1%;
  padding-bottom:2%;  
}

/* ------------------------INPUT----------------------------------------------------- */

.level {
	font-size: 30px;
	width: 5%;
  margin-bottom:1%;
  margin-left:-3%;
  margin-right:3%;
}

.levelInput {
  font-size: 30px;
  width: 110px;
  margin-bottom:1%;
  margin-left:-2%;
  margin-right:2%;
}

#classTable { 
  width: 600px;
  border-collapse:separate; 
  border-spacing:24px;
  margin:auto;
}

#classTable > tbody > tr {
  background-color: transparent;
}

.classButton { 
  font-size:200%;
  width:100%;
  background: none;
  background-repeat: no-repeat;
  background-position: center;
  background-size:100% 100%;
  border: none;
  outline: none;
  color: #cea564;
  text-shadow:
    -0.6px -0.6px 0 #000,
    0.6px -0.6px 0 #000,
    -0.6px 0.6px 0 #000,
    0.6px 0.6px 0 #000;
}

.submit {
  font-size:200%;
  width:230px;
  height:140px;
  background: none;
  background-image: url('images/LevelUpButton.png');
  background-repeat: no-repeat;
  background-position: center;
  background-size:100% 100%;
  border: none;
  outline: none;
  color:#cea564;
  text-shadow:
    -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000;
  font-weight: bold;
  margin-left:-5px;
}

.submit:active {
  filter:brightness(150%);
}

/* ------------------------OUTPUT----------------------------------------------------- */

.output {
	width: 65%;
	margin: auto;
	text-align: left;
}

#error {
  color:red;
  text-align:center;
  margin-right:5%;
}

#outputHeader {
	font-size: 50px;
}

.staticFeature {
  width:95%;
}

.staticFeature > ul > li {
  margin-bottom:1%;
}

.featureButton { 
  background-color: transparent;
  border: none;
  outline:none;
  font-size: 30px;
  text-align:left;
  color: #cc3300; /*orange*/
}

.featureButton:active {
  filter:brightness(150%);
}


#liFeature > ul ul {
  list-style-type: disc;
}

.down {
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}

.note, #hp > div {
  font-size:22px;
}

.note {
  margin-left:-6px;
}

#hp {
  margin-bottom:-20px;
}

